--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4824,7 +4824,9 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-inverse .nav > li > a:focus,
 .navbar-inverse .nav > li > a:hover {
-  color: #ffffff;
+  /* color: #ffffff; */
+  /* menu顏色 Hover */
+  color: #c76bee;
   background-color: transparent;
 }
 
