--- a/css/timeLine2.css
+++ b/css/timeLine2.css
@@ -63,7 +63,8 @@ h2 {
   border-radius: 5px;
   /* border: 1px solid rgb(9, 111, 183); */
   /* background-color: rgb(25, 141, 224); */
-  background: rgba(23, 34, 59, 1);
+  /* background: rgba(23, 34, 59, 1); */
+  background: rgba(0, 0, 0, 0.5);
   position: relative;
   z-index: 9;
   /* box-shadow: 0px 0px 3px 0px rgb(46, 152, 228); */
